<?xml version="1.0" encoding="utf-8"?>

<!--
  activity_welcome.xml

  Author: Kapil Pandey
  Syndey Group

  Description:
  Welcome screen layout that serves as the entry point to the app.
  It includes:
  - Background art
  - App logo and tagline
  - "Get Started" button to navigate to SignIn screen
  - Supports dynamic link redirection in code

  Last Updated: May 2025
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Welcome">

    <!-- Background curve at bottom of screen -->
    <ImageView
        android:id="@+id/bg_curve"
        android:layout_width="412dp"
        android:layout_height="526dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/welcome_bottom_bg" />

    <!-- Title text above image -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Main_Topic"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- App main icon (illustration or logo) -->
    <ImageView
        android:id="@+id/img_main"
        android:layout_width="371dp"
        android:layout_height="374dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/welcome_expense_icon" />

    <!-- Subtitle tagline text -->
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sub_tagline"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="@+id/btn_start" />

    <!-- "Get Started" button to go to SignIn -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        style="@android:style/Widget.Button"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
